# vocence

./: .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  docker-compose.yml  docker-entrypoint.sh  env.example  pyproject.toml  temp.jinja  vocence.toml
dashboard/: app.js  config.js  detail.html  detail.js  index.html  sample-dashboard.json  sample-run.json  style.css
data/: gap.md
docs/: CLI.md  base-model-protocol.md  cicd-pipeline.md  scoring.md  setup-postgres-vocence.md  setup-vocence-db.sh  validator-setup.md
miner_sample/: MINER_GUIDE.md  README.md
scripts/: audio_judge_single_audio_comprehensive.py
tests/: __init__.py  conftest.py  test_adapters_api.py  test_adapters_chain.py  test_adapters_chain_reveal.py  test_adapters_chutes.py  test_adapters_deployment.py  test_adapters_media.py  test_adapters_model_store.py  test_adapters_storage.py  test_dashboard_leaderboard_store.py  test_dashboard_model.py  test_domain_config.py  test_domain_entities.py  test_domain_spec.py  test_dynamic_margin_lcb.py  test_engine_chain_gateway.py  test_engine_coordinator.py  test_engine_genesis.py  test_engine_koth_coordinator.py  test_engine_koth_cycle.py  test_engine_reign_and_corpus.py  test_engine_run_validator_and_localcheck.py  test_gateway_cli.py  test_gateway_http_app.py  test_gateway_http_models.py  test_hippius_bucket.py  test_judges_serving.py  test_king_commit.py  test_pipeline_corpus_builder.py  test_pipeline_dense_scoring.py  test_pipeline_duel.py  test_pipeline_duel_runner.py  test_pipeline_evaluation.py  test_pipeline_judges.py  test_pipeline_local_tts.py  (+11 more)
(+100 files in other folders)
